--- a/productos.html
+++ b/productos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
   </head>
   <body>
-    <pre>"[
+    <pre>[
       {
         "Producto": "Modelado predictivo",
         "Categoría del Producto": "Libros",
@@ -132095,6 +132095,6 @@
         "lat": -4.21528,
         "lon": -69.94056
       }
-    ]"</pre>    
+    ]</pre>    
   </body>
 </html>
